# simplex

./: .gitignore  CLEANUP_FOR_PUBLIC.md  Fig2.py  Fig3.py  Fig4.py  FigAppendix.py  HUGGINGFACE_UPLOAD.md  Makefile  PAPER_CODE_GUIDE.md  README.md  RUN_FIGURES.md  experimental_methods.md  experimental_methods.tex  extractors.py  list_s3_contents.py  methods.tex  painring.ipynb  paper_methods.md  paper_methods_gemeni.md  paper_methods_hf.md  plot_utils.py  probing_methodology_neurips.md  pyproject.toml  regression.py  run_activation_analysis.sh  scratches.ipynb  test_s3_loader.py  tokenizer.py  train_product.py  upload_to_s3.py
.ipynb_checkpoints/: scratches-checkpoint.ipynb
_old_files/: analysis_pca_20250221.py  notsure2.py
configs/: experiment_config_transformer_mess3_bloch_hw.yaml  experiment_config_transformer_mess3_bloch_hw_6.yaml
dashboard/: PLANNING.md  README.md  README_run.md  dashboard.py  data_loader.py  debug_data_loader.py  requirements.txt
notebooks/: Analysis.ipynb
old_files/: analysis_20250218.py  analysis_20250218_rnn.py  analysis_mses_20250217.py  analysis_mses_20250217_transformer.py  notsure1.py  s3_migration.py  sweep_l2_and_rcond.py
scripts/: analysis_mses_20250205.py  analysis_mses_rnn_20250205.py  conda4.txt  data_manager.py  experiment_config_rnn.yaml  experiment_config_tom_quantum_fan_post.yaml  experiment_config_tom_quantum_rnn_short.yaml  experiment_config_tom_quantum_rnn_short_lr_1e-2.yaml  experiment_config_tom_quantum_rnn_short_lr_1e-4.yaml  experiment_config_tom_quantum_rrxor.yaml  experiment_config_tom_quantum_short.yaml  (+17 more)
(+186 files in other folders)
